# XML-Framework

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  DESIGN.md  README.md
apps/: CMakeLists.txt  fragment.cpp.xml  srcFacts.cpp  xmlpipeline.cpp
framework/: CMakeLists.txt
framework/include/: Filter.hpp  FilterFactory.hpp  MacroFilter.hpp  OutputFilter.hpp  ParserFilter.hpp  StatisticsFilter.hpp  XMLPipeline.hpp  XPathFilter.hpp
framework/src/: CMakeLists.txt  FilterFactory.cpp  MacroFilter.cpp  OutputFilter.cpp  ParserFilter.cpp  StatisticsFilter.cpp  XMLPipeline.cpp  XPathFilter.cpp
toolkit/: CMakeLists.txt
toolkit/include/: XMLDocument.hpp  XMLDocumentHandlerParser.hpp  XMLDocumentParser.hpp  XMLDocumentTemplateParser.hpp  XMLParser.hpp  XMLParserDocumentHandler.hpp  XMLParserFactory.hpp  XMLParserHandler.hpp  XPathEvaluator.hpp  refillBuffer.hpp
toolkit/src/: CMakeLists.txt  XMLDocument.cpp  XMLDocumentHandlerParser.cpp  XMLDocumentTemplateParser.cpp  XMLParser.cpp  XMLParserDocumentHandler.cpp  XMLParserFactory.cpp  XPathEvaluator.cpp  refillBuffer.cpp
